# Py12_HW_10

./: pyproject.toml
hw10_app/: docker-compose.yml  manage.py
hw10_app/hw10_app/: asgi.py  settings.py  urls.py  wsgi.py
hw10_app/quotes_app/: forms.py  models.py  scraping.py  urls.py  views.py
hw10_app/quotes_app/templates/quotes_app/: author.html  author_page.html  base.html  index.html  quot.html
hw10_app/users/: forms.py  urls.py  views.py
hw10_app/users/templates/users/: logout.html  signin.html  signup.html
